@@ -5,7 +5,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.3'
+    classpath 'com.android.tools.build:gradle:3.1.4'
     classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
   }
 }
