@@ -1,3 +1,6 @@
+2018-08-08 (0.12.13)
+	ANDROID: remove hardcoded references to "/sdcard" path
+
 2018-07-15 (0.12.13)
 	ANDROID: migrate build from eclispe to android studio
 	ANDROID: fix issue #66
